OpenAPIの仮定義がだいたいまとまったので、Author, Books の全権取得の基本コードを書き直した。
