# src/main/kotlin/saurus/plesio/bookserver/controller/rest/author/GetAuthorController.kt
@@ -5,23 +5,22 @@ import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
 import saurus.plesio.bookserver.db.AuthorRepository
-import saurus.plesio.bookserver.openapi.generated.controller.GetAuthorSingleApi
+import saurus.plesio.bookserver.openapi.generated.controller.GetAuthorApi
 import saurus.plesio.bookserver.openapi.generated.model.Author
 
 
 @RestController
-class GetAuthorSingleController : GetAuthorSingleApi {
+class GetAuthorController : GetAuthorApi {
   @Autowired
   lateinit var authorRepository: AuthorRepository
 
-  override fun getAuthorSingle(authorId: String): ResponseEntity<Author> {
+  override fun getAuthor(authorId: String): ResponseEntity<Author> {
     val author = authorRepository.findById(authorId)?.let {
       when {
         it.authorId.isNullOrBlank() -> null
         else -> Author(
           authorId = it.authorId!!,
-          firstName = it.firstName ?: "",
-          lastName = it.lastName ?: "",
+          authorName = it.authorName!!,
           birthYear = it.birthYear,
           remarks = it.remarks ?: ""
         )
@@ -32,5 +31,6 @@ class GetAuthorSingleController : GetAuthorSingleApi {
       ResponseEntity(it, HttpStatus.OK)
     } ?: ResponseEntity(HttpStatus.NOT_FOUND)
   }
+
 }
 
