# src/main/kotlin/saurus/plesio/bookserver/controller/rest/author/GetAuthorsController.kt
@@ -5,21 +5,21 @@ import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
 import saurus.plesio.bookserver.db.AuthorRepository
-import saurus.plesio.bookserver.openapi.generated.controller.GetAuthorsAllApi
+import saurus.plesio.bookserver.openapi.generated.controller.GetAuthorsApi
+import saurus.plesio.bookserver.openapi.generated.model.Author
 import saurus.plesio.bookserver.openapi.generated.model.AuthorsResponse
 
 
 @RestController
-class GetAuthorsAllController : GetAuthorsAllApi {
+class GetAuthorsController : GetAuthorsApi {
   @Autowired
   lateinit var authorRepository: AuthorRepository
 
-  override fun getAuthorsAll(): ResponseEntity<AuthorsResponse> {
+  override fun getAuthors(firstName: String?, lastName: String?): ResponseEntity<AuthorsResponse> {
     return ResponseEntity(AuthorsResponse(authors = authorRepository.findAll().map {
-      saurus.plesio.bookserver.openapi.generated.model.Author(
+      Author(
         authorId = it.authorId,
-        firstName = it.firstName,
-        lastName = it.lastName,
+        authorName = it.authorName!!,
         birthYear = it.birthYear,
         remarks = it.remarks
       )
